# Build-Counter

./: BCConfig.h.in  CMakeLists.txt  README.md  configure.sh  generateVisualStudioProject.bat
src/: Main.cpp
